# cuFFS

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  VERSION  WISDOM  bracewell.slurm  build.sh  build_bracewell.sh  build_brinkley.sh  build_galaxy.sh  build_laptop.sh  parsetFile  rmsynthesis.c  rmsynthesis.h  synthesis.par  version.h
CMakeModules/: FindCFITSIO.cmake  FindLIBCONFIG.cmake
docs/journal/: NOTES  ecrc.sty  make  model2-names.bst  rmsynthesis.aux  rmsynthesis.bbl  rmsynthesis.blg  rmsynthesis.tex
helper/: derotate.sh  makeFitsCube.py  rotate.sh
src/: constants.h  devices.cu  devices.h  doRMsythesis.c  fileaccess.c  fileaccess.h  inputparser.c  inputparser.h  rmsf.c  rmsf.h  rmsynthesis  rmsynthesis.c  rmsynthesis.h  structures.h  version.h
src/makecube/: constants.h  makecube.c
src/rmsynthesis/: devices.h  fileaccess.c  inputparser.c  rmsynthesis.c  structures.h
src/rmsynthesis_cpu/: NOTES  cpu_fileaccess.c  cpu_fileaccess.h  cpu_rmclean.c  cpu_rmclean.h  cpu_rmsf.c  cpu_rmsf.h  cpu_rmsynthesis.c  cpu_version.h  parsetFile
src/rotate/: constants.h  fitsrotate.c  transpose.c  transpose.h
src/synthesis/: constants.h  ms_access.cpp  ms_access.h  prepare_grid.cpp  prepare_grid.h  synth_fileaccess.c  synth_fileaccess.cpp  synth_fileaccess.h  synthesis.c  synthesis.cpp
testFiles/: freqTable  q.sub.fits  u.sub.fits
